--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-native": "0.68.2",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-reanimated": "^2.8.0"
+    "react-native-reanimated": "^2.8.0",
+    "react-native-redash": "^16.3.0",
+    "react-native-svg": "^12.3.0",
+    "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
